--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@ If you find this useful, please consider <a href="https://paypal.me/sauvikbiswas
 <ul>
 <li><a href="how-to.html">00: How the code blocks have been laid out</a></li>
 <li><a href="vector-simple.html">01: Writing a custom mathematical data type</a></li>
-<li><a href="functional-programming.html">02: Functions in Python</a></li>
+<li><a href="functions.html">02: Functions in Python</a></li>
 </ul>
 </div>
 <div class="donate-footer">
