--- a/html/to-do.html
+++ b/html/to-do.html
@@ -2,7 +2,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="stylesheet.css" rel="stylesheet">
-<title>Anatomy of the Snake : 00: How the code blocks have been laid out</title>
+<title>Anatomy of the Snake : 01: Unsorted to-do list</title>
 <script type="text/javascript" async
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML" async>
 </script>
@@ -17,36 +17,20 @@
 <div class="donate-header">
 If you find this useful, please consider <a href="https://paypal.me/sauvikbiswas" target="_blank">donating</a>. More information can be found in the <a href="about.html">about page</a>.
 </div>
-<div class="header">00: How the code blocks have been laid out</div>
+<div class="header">01: Unsorted to-do list</div>
 <div class="content">
-<p>This is a code in a file&mdash;</p>
-<div class="file-code"><pre><code>class vector(object):
-
-  def __init__(self, r1, r2, r3):
-    self.data=[float(r1), float(r2), float(r3)]
-    return
-</pre></code></div>
-
-<p>Let's say that the file is saved as <code>vector_functions.py</code>.</p>
-<p>This is a code that must be executed in Python shell&mdash;</p>
-<div class="code-block"><pre><code>>>> a=vector(1,2,3)
->>> print(a.data)
-[1.0, 2.0, 3.0]
-</pre></code></div>
-
-<p>The lines that must be manually typed is prefixed by the Python REPL prompt&mdash;<code>&gt;&gt;&gt;</code>. The ones without are the outputs.</p>
-<p>What is not explicitly mentioned is that the reader will have to import the code before executing the instructions.</p>
-<div class="code-block"><pre><code>>>> from vector_functions import vector
->>> a=vector(1,2,3)
->>> print(a.data)
-[1.0, 2.0, 3.0]
-</pre></code></div>
+<ul>
+<li>Generators</li>
+<li>List and generator comprehension</li>
+<li>Classes from scratch using type</li>
+<li>Inheritance and MRO computation</li>
+</ul>
 </div>
 <div class="donate-footer">
 If you found this useful, please consider <a href="https://paypal.me/sauvikbiswas" target="_blank">donating</a>. More information can be found in the <a href="about.html">about page</a>.
 </div>
 <div class="copyright">
-  &copy;2019, <a href="https://sauvikbiswas.com" target="_blank">Sauvik Biswas</a>. All rights reserved. Last updated: 2019-06-12
+  &copy;2019, <a href="https://sauvikbiswas.com" target="_blank">Sauvik Biswas</a>. All rights reserved. Last updated: 2019-06-18
 </div>
 <p><a href="index.html">Table of contents</a></p>
 <div id="disqus_thread"></div>
@@ -57,8 +41,8 @@ If you found this useful, please consider <a href="https://paypal.me/sauvikbiswa
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 /*
 var disqus_config = function () {
-this.page.url = https://sauvikbiswas.com/AOTS/how-to.html;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = how-to; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+this.page.url = https://sauvikbiswas.com/AOTS/about.html;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = about; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 */
 (function() { // DON'T EDIT BELOW THIS LINE
