--- a/html/about.html
+++ b/html/about.html
@@ -20,8 +20,9 @@ If you find this useful, please consider <a href="https://paypal.me/sauvikbiswas
 <div class="header">00: About this project</div>
 <div class="content">
 <p>In June '19, I found myself in a financially weird position. The reasons of this misfortune were not under my control. I thought of writing something that would be of value to the greater community and thus this project was born. I will keep it free for all but would welcome any donation that might help me sustain myself as well as motivate me to devote time on this book.</p>
+<p>Any comments regarding the contents or the arrangement of topics in the book are also welcome. I have added Disqus threads to each page. You can also visit <a href="https://disqus.com/home/forums/aots/">https://disqus.com/home/forums/aots/</a> to see all discussion threads.</p>
 <p>I found that a lot of books and tutorials exist that cater to a beginner but not many that helps someone who would want to understand the innards and the skeleton of the language. I have been a programmer all my life. I have used Python extensively in the last five or six years and have always wondered if there were good, free, and structured material on the web that could explain me the workings.</p>
-<p>P.S. Now that <em>Learn Python the Hard Way</em> is no more free, I can look into writing a replacement book for beginners as well.</p>
+<p>P.S. Now that <em>Learn Python the Hard Way</em> is no more free, there is a market opportunity for a replacement book for beginners.</p>
 </div>
 <div class="donate-footer">
 If you found this useful, please consider <a href="https://paypal.me/sauvikbiswas" target="_blank">donating</a>. More information can be found in the <a href="about.html">about page</a>.
@@ -30,5 +31,25 @@ If you found this useful, please consider <a href="https://paypal.me/sauvikbiswa
   &copy;2019, <a href="https://sauvikbiswas.com" target="_blank">Sauvik Biswas</a>. All rights reserved. Last updated: 2019-06-07
 </div>
 <p><a href="index.html">Table of contents</a></p>
+<div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = https://sauvikbiswas.com/AOTS/about.html;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = about; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://aots.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </body>
 </html>
