--- a/html/index.html
+++ b/html/index.html
@@ -22,12 +22,14 @@ If you find this useful, please consider <a href="https://paypal.me/sauvikbiswas
 <h2>00: Front matter</h2>
 <ul>
 <li><a href="about.html">00: About this project</a></li>
+<li><a href="to-do.html">01: Unsorted to-do list</a></li>
 </ul>
 <h2>99: Unsorted chapters</h2>
 <ul>
 <li><a href="how-to.html">00: How the code blocks have been laid out</a></li>
 <li><a href="vector-simple.html">01: Writing a custom mathematical data type</a></li>
-<li><a href="functions.html">02: Functions in Python</a></li>
+<li><a href="functions.html">02: Functions&mdash;I. The anonymous ones</a></li>
+<li><a href="functions-ii.html">03: Functions&mdash;II. Arguments and returns</a></li>
 </ul>
 </div>
 <div class="donate-footer">
