--- a/html/about.html
+++ b/html/about.html
@@ -19,7 +19,7 @@ If you find this useful, please consider <a href="https://paypal.me/sauvikbiswas
 </div>
 <div class="header">00: About this project</div>
 <div class="content">
-<p>In June '19, I found myself in a financially weird position. The reasons of this misfortune were not under my control. I thought of writing something that would be of value to the greater community and thus this project was born. I will keep it free for all but would welcome any donation that might help me sustain myself as well as motivate me to devote time on this book.</p>
+<p>I thought of writing something that would be of value to the greater community and thus this project was born. I will keep it free for all but would welcome any donation (<a href="https://paypal.com/sauvikbiswas">https://paypal.com/sauvikbiswas</a>) that might help me sustain myself, buy me a coffee or a meal as well as motivate me to devote time on this book.</p>
 <p>Any comments regarding the contents or the arrangement of topics in the book are also welcome. I have added Disqus threads to each page. You can also visit <a href="https://disqus.com/home/forums/aots/">https://disqus.com/home/forums/aots/</a> to see all discussion threads.</p>
 <p>I found that a lot of books and tutorials exist that cater to a beginner but not many that helps someone who would want to understand the innards and the skeleton of the language. I have been a programmer all my life. I have used Python extensively in the last five or six years and have always wondered if there were good, free, and structured material on the web that could explain me the workings.</p>
 <p>P.S. Now that <em>Learn Python the Hard Way</em> is no more free, there is a market opportunity for a replacement book for beginners.</p>
