--- a/html/to-do.html
+++ b/html/to-do.html
@@ -41,8 +41,8 @@ If you found this useful, please consider <a href="https://paypal.me/sauvikbiswa
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 /*
 var disqus_config = function () {
-this.page.url = https://sauvikbiswas.com/AOTS/about.html;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = about; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+this.page.url = https://sauvikbiswas.com/AOTS/to-do.html;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = to-do; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 */
 (function() { // DON'T EDIT BELOW THIS LINE
