--- a/html/to-do.html
+++ b/html/to-do.html
@@ -2,7 +2,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="stylesheet.css" rel="stylesheet">
-<title>Anatomy of the Snake : 01: Unsorted to-do list</title>
+<title>Anatomy of the Snake : 02: Unsorted to-do list</title>
 <script type="text/javascript" async
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML" async>
 </script>
@@ -17,13 +17,15 @@
 <div class="donate-header">
 If you find this useful, please consider <a href="https://paypal.me/sauvikbiswas" target="_blank">donating</a>. More information can be found in the <a href="about.html">about page</a>.
 </div>
-<div class="header">01: Unsorted to-do list</div>
+<div class="header">02: Unsorted to-do list</div>
 <div class="content">
 <ul>
-<li>Generators</li>
-<li>List and generator comprehension</li>
-<li>Classes from scratch using type</li>
-<li>Inheritance and MRO computation</li>
+<li>Functions-II&mdash;<code>/</code> for position + pos or kwarg;</li>
+<li>Generator functions in Functions segment.</li>
+<li>List and generator comprehension.</li>
+<li>Classes from scratch using type.</li>
+<li>Inheritance and MRO computation.</li>
+<li>Rewrite the vector class implementation as intro to data type.</li>
 </ul>
 </div>
 <div class="donate-footer">
