--- a/html/functions-ii.html
+++ b/html/functions-ii.html
@@ -2,7 +2,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="stylesheet.css" rel="stylesheet">
-<title>Anatomy of the Snake : 03: Functions&mdash;II. Arguments and returns</title>
+<title>Anatomy of the Snake : 02: Arguments to a function and its call</title>
 <script type="text/javascript" async
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML" async>
 </script>
@@ -17,11 +17,11 @@
 <div class="donate-header">
 If you find this useful, please consider <a href="https://paypal.me/sauvikbiswas" target="_blank">donating</a>. More information can be found in the <a href="about.html">about page</a>.
 </div>
-<div class="header">03: Functions&mdash;II. Arguments and returns</div>
+<div class="header">02: Arguments to a function and its call</div>
 <div class="content">
 <h2>Arguments to Python functions</h2>
 <p>In the previous section, we had encountered two functions that had some optional arguments&mdash;the <code>reduce</code> function with its optional initial value and the <code>sorted</code> function with its optional key function and reverse flag.</p>
-<p>Let us try to write rewrite our earlier sinusoidal function \(y = A \cos (\omega t + \phi) \). This time if offset, \(phi\) is not specified, we will assume it to be 0.</p>
+<p>Let us try to write rewrite our earlier sinusoidal function \(y = A \cos (\omega t + \phi) \). This time if time, \(t\), or offset, \(\phi\), is not specified, we will assume them to be 1 and 0 respectively.</p>
 <div class="file-code"><pre><code>import math
 def w(a, omega, t=1, phi=0):
     return a*math.sin(omega*t+phi)
@@ -57,6 +57,7 @@ def w(a, omega, t=1, phi=0):
 </pre></code></div>
 
 <p>These are function calls that uses keyword arguments for all the bindings. When using such a call style, even the arguments without default values can be positioned anywhere.</p>
+<p><em>Note:</em> If positional arguments are specified, then the positional arguments must come before keyword arguments. Thus, <code>w(t=1, phi=0, 1, 2.5)</code> is an invalid call.</p>
 <p>It is also possible to pass all positional arguments as a sequence&mdash;list or tuple&mdash;and all keyword arguments as a dictionary. Here are some sets of identical calls.</p>
 <div class="code-block"><pre><code>>>> w(1,2.5,1,3.14)
 -0.599747328794043
@@ -87,7 +88,92 @@ def w(a, omega, t=t_default, phi=phi_default):
 t_default = 0
 </pre></code></div>
 
-<p>If the function is called in the following fashion: <code>w(1,2.5)</code>, the defaults would be <code>t=1</code> and <code>phi=0</code> and not <code>t=0</code> and <code>phi=0</code>. This is because the evaluation of defaults happen when the <code>def</code> statement is encountered. However, the body of the function is not evaluated at that stage&mdash;we can still take advantage of Python's lazy evaluation.</p>
+<p>If the function is called in the following fashion: <code>w(1,2.5)</code>, the defaults would be <code>t=1</code> and <code>phi=0</code> and not <code>t=0</code> and <code>phi=0</code>. This is because Python evaluates the defaults when it encounters the <code>def</code> statement. However, the body of the function is not evaluated at that stage&mdash;we can still take advantage of Python's lazy evaluation.</p>
+<p>We now focus on the arguments of <code>sorted</code>. What if we pass the values in position instead of named arguments. According to our example, it should work.</p>
+<div class="code-block"><pre><code>>>> a = [2,5,4,1,3]
+>>> sorted(a, None, True)
+&lt;Traceback message&gt;
+TypeError: must use keyword argument for key function
+</pre></code></div>
+
+<p>This is an interesting scenario. sorted doesn't allow positional arguments for certain positions. We can implement the same, too. In our sinusoidal function, we can force something like this: the first two can be positional or named arguments and the last two would be strictly named ones. In order to do so, we will have to sneak in the <code>*</code> in the declaration. Anything after that would have to be strictly named arguments. They need not even have default values.</p>
+<div class="file-code"><pre><code>import math
+def w(a, omega, *, t, phi):
+    return a*math.sin(omega*t+phi)
+</pre></code></div>
+
+<p>If we now test a simple cases&mdash;</p>
+<div class="code-block"><pre><code>>>> w(1,2.5,1,3.14)
+TypeError: w() takes 2 positional arguments but 4 were given
+
+>>> w(1, 2.5, t=1, phi=0)
+0.5984721441039565
+
+>>> w(t=1, phi=0, a=1, omega=2.5)
+0.5984721441039565
+</pre></code></div>
+
+<p>The first two arguments can be positional or named. We can even force all of the arguments to be named by writing <code>def w(*, a, omega, t, phi)</code>.</p>
+<p><em>Note:</em> From Python 3.9, it is also possible to enforce a strict positional argument by using <code>/</code> in the <code>def</code> declaration. Anything before <code>/</code> must be passed as positional, between <code>/</code> and <code>*</code> as positional or named and strictly named after <code>*</code>. In the declaration <code>def w(a, /, omega, *, t, phi)</code>, Python expects at least one positional argument whose first value would be assigned to <code>a</code> and at least two named arguments&mdash;<code>t</code> and <code>phi</code>. If two positional arguments are passed, the second one would be assigned to <code>omega</code>. If only one positional argument is passed, <code>omega</code> must be named. We can even force all of the arguments to be positional by writing <code>def w(a, omega, t, phi, /)</code>.</p>
+<h2>Arguments of unknown length</h2>
+<p>It is possible to accept arguments of any arbitrary length into a function. The best way to demonstrate this is to write a function that prints its arguments.</p>
+<div class="file-code"><pre><code>def print_args(*args, **kwargs):
+    print(args)
+    print(kwargs)
+    return
+</pre></code></div>
+
+<p>Let us take some of the earlier calls and test them out.</p>
+<div class="code-block"><pre><code>>>> print_args(1,2.5,phi=3.14)
+(1, 2.5)
+{'phi': 3.14}
+
+>>> print_args(t=1, phi=0, a=1, omega=2.5)
+()
+{'t': 1, 'phi': 0, 'a': 1, 'omega': 2.5}
+</pre></code></div>
+
+<p>All positional arguments are stored in <code>args</code> are tuple and all named arguments are stored in <code>kwargs</code> as dictionary. The names of these attributes need not be <code>args</code> and <code>kwargs</code>. They can be anything. However, these specific ones have become part of many Python programmers' vocabulary and thus have become informal standard.</p>
+<p>It is possible to have some fixed arguments and some free (or extra) ones. As usual, the positional ones must come first.</p>
+<div class="file-code"><pre><code>def print_args(a1, a2, *args, kw1, kw2, **kwargs):
+    print(a1, a2, args)
+    print(kw1, kw2, kwargs)
+    return
+</pre></code></div>
+
+<p>That is the correct order of arguments in the <code>def</code> statement&mdash;fixed positional arguments, followed by free positional arguments, followed by fixed keyword arguments, and finally, the free keyword arguments.</p>
+<div class="code-block"><pre><code>>>> print_args(1, 2, 3, 4, kw1=5, kw2=6, kw3=7, kw4=8)
+1 2 (3, 4)
+5 6 {'kw3': 7, 'kw4': 8}
+</pre></code></div>
+
+<p>Here is a nice usage of the free-form arguments. Let us write a <code>timer</code> function that transparently wraps the input and output of a function as well as prints the time taken to run the function.</p>
+<div class="file-code"><pre><code>import time
+def timer(f, *args, **kwargs):
+    start_time = time.time()
+    f_out = f(*args, **kwargs)
+    exec_time = time.time()-start_time
+    print("The function "+f.__name__+" was executed in "+str(exec_time)+" seconds.")
+    return f_out
+</pre></code></div>
+
+<p>We pass the function we want to time as the first argument. Since we have no idea what are the arguments of this function <em>a priori</em>, we catch all the rest arguments in <code>*args</code> and <code>**kwargs</code> and pass them as-is to the function call. Let us try it out on two examples we have already seen before.</p>
+<div class="code-block"><pre><code>>>> from functools import reduce
+>>> s = ["I", "am", "a", "broken", "sentence."]
+>>> join = lambda delim: lambda x, y: x+delim+y
+>>> joined_s = timer(reduce, join(" "), s)
+The function reduce was executed in 1.1682510375976562e-05 seconds.
+>>> print(joined_s)
+I am a broken sentence.
+
+>>> k_q_n = lambda x: (x[1], x[0])
+>>> sorted_inventory = timer(sorted, inventory, key=k_q_n)
+The function sorted was executed in 1.7642974853515625e-05 seconds.
+>>> print(sorted_inventory)
+[('banana', 2), ('pineapple', 2), ('apple', 3), ('orange', 3), ('pear', 5)]
+</pre></code></div>
+
+<p>If we take one of the examples&mdash;let's say the <code>reduce</code> one&mdash;we can break down the workings of the function. We have already seen that the normal call to join our list of strings with space is <code>reduce(join(" "), s)</code>. The call <code>timer(reduce, join(" "), s)</code> assigns <code>f=reduce</code> and <code>args=(join(" "), s)</code>. The line <code>f_out = f(*args, **kwargs)</code> on substitution becomes <code>f_out=reduce(*(join(" "), s))</code>, which in turn is identical to <code>f_out=reduce(join(" "), s)</code>. This is exactly the normal call we have seen earlier. The output is captured in <code>f_out</code> and is returned as-is by the <code>timer</code> function but not before it has printed the time taken to execute the call <code>f_out=reduce(*(join(" "), s))</code>.</p>
 </div>
 <div class="donate-footer">
 If you found this useful, please consider <a href="https://paypal.me/sauvikbiswas" target="_blank">donating</a>. More information can be found in the <a href="about.html">about page</a>.
