Completed persistence of functions

--- a/html/functions-ii.html
+++ b/html/functions-ii.html
@@ -2,7 +2,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="stylesheet.css" rel="stylesheet">
-<title>Anatomy of the Snake : 02: Arguments to a function and its call</title>
+<title>Anatomy of the Snake : 02: Arguments and calls to a function</title>
 <script type="text/javascript" async
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML" async>
 </script>
@@ -17,7 +17,7 @@
 <div class="donate-header">
 If you find this useful, please consider <a href="https://paypal.me/sauvikbiswas" target="_blank">donating</a>. More information can be found in the <a href="about.html">about page</a>.
 </div>
-<div class="header">02: Arguments to a function and its call</div>
+<div class="header">02: Arguments and calls to a function</div>
 <div class="content">
 <h2>Arguments to Python functions</h2>
 <p>In the previous section, we had encountered two functions that had some optional arguments&mdash;the <code>reduce</code> function with its optional initial value and the <code>sorted</code> function with its optional key function and reverse flag.</p>
