--- a/html/index.html
+++ b/html/index.html
@@ -28,7 +28,8 @@ If you find this useful, please consider <a href="https://paypal.me/sauvikbiswas
 <h2>01: Functions</h2>
 <ul>
 <li><a href="functions-i.html">01: The anonymous ones and some usages</a></li>
-<li><a href="functions-ii.html">02: Arguments to a function and its call</a></li>
+<li><a href="functions-ii.html">02: Arguments and calls to a function</a></li>
+<li><a href="functions-iii.html">03: Generator functions</a></li>
 </ul>
 <h2>99: Unsorted chapters</h2>
 <ul>
