--- a/html/to-do.html
+++ b/html/to-do.html
@@ -20,8 +20,7 @@ If you find this useful, please consider <a href="https://paypal.me/sauvikbiswas
 <div class="header">02: Unsorted to-do list</div>
 <div class="content">
 <ul>
-<li>Functions-II&mdash;<code>/</code> for position + pos or kwarg;</li>
-<li>Generator functions in Functions segment.</li>
+<li>Return values, Volatile and Generator functions.</li>
 <li>List and generator comprehension.</li>
 <li>Classes from scratch using type.</li>
 <li>Inheritance and MRO computation.</li>
