--- a/html/index.html
+++ b/html/index.html
@@ -29,11 +29,8 @@ If you find this useful, please consider <a href="https://paypal.me/sauvikbiswas
 <ul>
 <li><a href="functions-i.html">01: The anonymous ones and some usages</a></li>
 <li><a href="functions-ii.html">02: Arguments and calls to a function</a></li>
-<li><a href="functions-iii.html">03: Generator functions</a></li>
-</ul>
-<h2>99: Unsorted chapters</h2>
-<ul>
-<li><a href="vector-simple.html">01: Writing a custom mathematical data type</a></li>
+<li><a href="functions-iii.html">03: Persistence and Closure</a></li>
+<li><a href="functions-iv.html">04: Generator functions</a></li>
 </ul>
 </div>
 <div class="donate-footer">
